--- a/css/timeline.css
+++ b/css/timeline.css
@@ -133,9 +133,10 @@ a:hover, a:active, a:focus {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.images:hover {
-  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+/*.images:hover {
+  transform: scale(1.5); 
 }
+*/
 
 
 .timeline-card {
